--- a/frontend/index.html
+++ b/frontend/index.html
@@ -647,7 +647,7 @@
 
     <script>
         // API Configuration
-        const API_URL = 'http://127.0.0.1:8000/api/v1/plan-trip';
+        const API_URL = process.env.NEXT_PUBLIC_API_URL;
 
         // DOM Elements
         const plannerForm = document.getElementById('plannerForm');
